[package]
name = "tentacle-pull"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tentacle = { git = "https://github.com/zeroqn/p2p", branch = "muta-disc", features = [ "flatc" ]}
log = "0.4.8"
futures = "0.3.4"
bytes = "0.5.4"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "signal", "time"]}
